src/objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>Refugee_Status_in_AZ__c</fullName>
        <label>Refugee Status in AZ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Residency_Status_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residency Status Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Single_Parent__c</fullName>
        <label>Single Parent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submit_Application_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit Application Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Form_Recent_Years_P_G__c</fullName>
        <label>Tax Form Recent Years P G</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Form_Recent_Years_Self__c</fullName>
        <label>Tax Form Recent Years Self</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teacher_s_Contract__c</fullName>
        <label>Teacher s Contract</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Temp_Housing__c</fullName>
        <label>Temp Housing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term_Semester__c</fullName>
        <label>Term Semester</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fall</fullName>
                </value>
                <value>
                    <fullName>Spring</fullName>
                </value>
                <value>
                    <fullName>Summer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term_Year__c</fullName>
        <label>Term Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Term</label>
        <referenceTo>Term__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Third_Party_Sponsor_Name__c</fullName>
        <label>Third Party Sponsor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party_Sponsor__c</fullName>
        <label>Third Party Sponsor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tribe_Member__c</fullName>
        <label>Tribe Member</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ultimate_Career_Goal__c</fullName>
        <label>Ultimate Career Goal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vehicle_Registration_Issue_Date_P_G__c</fullName>
        <label>Vehicle Registration Issue Date P G</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vehicle_Registration_Issue_Date_Self__c</fullName>
        <label>Vehicle Registration Issue Date Self</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Veterans_Educational_Benefits__c</fullName>
        <label>Veterans Educational Benefits</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>I don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Veterans_Services_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Veterans Services Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Voter_Registration_Issue_Date_P_G__c</fullName>
        <label>Voter Registration Issue Date P G</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voter_Registration_Issue_Date_Self__c</fullName>
        <label>Voter Registration Issue Date Self</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_During_First_Year__c</fullName>
        <label>Work During First Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, Full-Time</fullName>
                </value>
                <value>
                    <fullName>Yes, Part-Time</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>I Don&apos;t Know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Application-{0000}</displayFormat>
        <label>Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>